UCSFD8-612 fix background bleed through if title is too long

--- a/docroot/themes/custom/ucsf/assets/css/style.css
+++ b/docroot/themes/custom/ucsf/assets/css/style.css
@@ -6173,7 +6173,9 @@ a[href*="http"] .article-header__date {
 @media (min-width: 1050px) {
   .news-package-banner-image {
     grid-column: 6 / -2;
-    grid-row: 1 / 3; }
+    grid-row: 1 / 3;
+    background-image: -webkit-gradient(linear, left top, right top, color-stop(86%, #fff), color-stop(14%, transparent));
+    background-image: linear-gradient(to right, #fff 86%, transparent 14%); }
     .news-package-banner-image img {
       float: right;
       width: auto; } }
